[package]
name = "pallet-perun"
authors = ["PolyCrypt GmbH <info@polycry.pt>"]
license = "Apache-2.0"
version = "0.0.0"
homepage = "https://polycry.pt/"
keywords = ["blockchain", "channel", "perun"]
repository = "https://github.com/perun-network/perun-polkadot-pallet"
description = "FRAME pallet for Perun State Channels"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
polkadot-sdk = { version = "*", default-features = false, features = [
	"pallet-balances",
	"pallet-timestamp",
	"frame-support",
	"frame-system",
	"sp-core",
	"sp-runtime",
	"sp-std",
	"sp-io",
] }

codec = { package = "parity-scale-codec", version = "*", default-features = false, features = [
	"derive",
] }
scale-info = { version = "*", default-features = false, features = [
	"derive",
] } 

[dev-dependencies]
polkadot-sdk = { version = "*", features = [
	"sp-core",
	"sp-io",
	"sp-runtime",
] }


[features]
default = ["std"]
expose_privates = []

std = [
  "codec/std",
  "polkadot-sdk/std",
]

runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
